--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,6 +45,9 @@ jobs:
         env:
           SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
 
+      - name: Add SSH passphrase
+        run: echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add -
+
       - name: Build and push Docker image
         run: |
           docker build -t abc_app:latest .
