--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,7 +46,7 @@ jobs:
           SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
 
       - name: Add SSH passphrase
-        run: echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add -
+        run: echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add
 
       - name: Build and push Docker image
         run: |
